--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,21 @@
+auth==0.5.3
+blinker==1.6.2
 cachetools==5.3.1
+dnspython==2.3.0
+eventlet==0.33.3
+falcon==3.1.1
+google==3.0.0
 google-auth==2.19.1
 google-auth-oauthlib==1.0.0
+greenlet==2.0.2
 gspread==5.9.0
+gunicorn==20.1.0
+mongoengine==0.27.0
 oauthlib==3.2.2
 pyasn1==0.5.0
 pyasn1-modules==0.3.0
+pymongo==4.3.3
+python-dotenv==1.0.0
 requests-oauthlib==1.3.1
 rsa==4.9
+Werkzeug==2.3.6
